# CloudPlatform

./: CMakeLists.txt  README.md  gitignore  main.cpp  resources.qrc
doc/: backup-restore-design.md  software-design.md
rec/: resources.qrc  style.qss
src/: authmanager.cpp  authmanager.h  cosmanager.cpp  cosmanager.h  downloadpage.cpp  downloadpage.h  localmanagerpage.cpp  localmanagerpage.h  logindialog.cpp  logindialog.h  mainwindow.cpp  mainwindow.h  projectpage.cpp  projectpage.h  sshmanager.cpp  sshmanager.h  sshmanager_append.cpp  uploadpage.cpp  uploadpage.h  usermanagedialog.cpp  usermanagedialog.h
